# TeacherHelper

./: .gitignore  README.md  analiza_projektu_v4.docx  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run_dev.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_llm_usage_log.py  003_dry_run_and_incidents.py  004_conversations_messages.py  005_topics.py  006_conversation_extra.py  007_admin_seed_user.py  008_fix_admin_seed_email.py  009_fix_admin_seed_email_local_tld.py  010_user_llm_daily_token_limit.py
backend/teacher_helper/: __init__.py  config.py  main.py
backend/teacher_helper/adapters/: __init__.py
backend/teacher_helper/adapters/http/: __init__.py  app.py  deps.py  rate_limit.py  routes_admin.py  routes_auth.py  routes_chat.py  routes_conversations.py  routes_files.py  routes_intent.py  routes_kie.py  routes_music_kie.py  routes_projects.py  routes_sound.py  routes_topics.py  routes_voice.py  schemas.py
backend/teacher_helper/domain/: __init__.py  entities.py
backend/teacher_helper/infrastructure/: __init__.py  alert_webhook.py  chunking.py  elevenlabs_sound.py  embeddings.py  export.py  factories.py  image_dalle.py  image_openrouter.py  image_stub.py  kie_webhook.py  llm_openrouter.py  llm_stub.py  lyria_openrouter.py  media_factory.py  music_kie.py  presentation_spec.py  qdrant.py  replicate_sound.py  system_incidents.py  text_extract.py  usage_limits.py  video_stub.py  web_search.py
backend/teacher_helper/infrastructure/db/: file_ops.py  llm_usage.py  models.py  session.py
backend/teacher_helper/infrastructure/storage/: local.py
backend/teacher_helper/security/: __init__.py  resource_confirmation.py
backend/teacher_helper/use_cases/: __init__.py  chat_orchestrator.py  conversation_context.py  ports.py  project_workspace.py
research/image-provider-benchmark/: .env.example  README.md  pyproject.toml
research/image-provider-benchmark/benchmark/: __init__.py  main.py  model_catalog.py  openai_images.py  openrouter_images.py  settings.py  stability_images.py
research/image-provider-benchmark/static/: index.html
research/music-provider-benchmark/: .env.example  README.md  pyproject.toml
research/music-provider-benchmark/benchmark/: __init__.py  elevenlabs_music.py  kie.py  main.py  model_catalog.py  openrouter_media.py  settings.py  wavespeed_minimax.py
research/music-provider-benchmark/static/: index.html
(+58 files in other folders)
